	- Perform banked turns when the target is behind us at long range and extending is allowed instead of Immelmann turns or turning directly to target. Threshold is clamp(8 * max speed, 1000, 4000).
	- Pilot AI turns will now turn harder (using Max AoA setting) towards the notch direction the closer the missile is to impact.
- Weapons:
	- Fixes for initial bullet placement and simulated hit position when Krakensbane is not active.
  	- Missiles:
		  - Add new Orbital guidance option for Modular Missiles
		    - Missile will attempt to intercept orbital target at the user-set Max Speed value
      - Fix clustermissiles launching copies of themselves instead of submunitions.
	  - Fix for HEKV launching unguided in non-ideal situations.
- Countermeasures
	- Add vessel's velocity to chaff ejection particle effect.
	- Use vessel acceleration instead of velocity for chaff decoy factor calculation when in space.
- Vessel Mover / Spawning:
	- Check for outdated loadMeta files when refreshing the craft list in the vessel selection window and update them since KSP doesn't update them when you save your craft!
	- Fix the spawn point selection sometimes not registering.
	- Vessels with an orbital AI that are spawned at safe orbital altitudes are spawned into circular orbits. Vessels are spawned pointing away from each other.
	- Increase maximum spawn distance to 200km.
- ModIntegration:
	- Fixes for inhibiting CameraTools when initial spawning during continuous spawning and disable auto-switching to newly spawned craft joining the competition.

v1.6.8.0
IMPROVEMENTS / FIXES
- General:
	- Add tracking of 'named modules' (from non-dependency DLLs) to the VesselModuleRegistry.
	- Optimise "Vector3.Distance(from, to) < dist" type checks.
- UI:
	- rcsOverride enabled ECMJammers now properly affect RCS in the SPH/VAB RCS GUI.
	- Fix Equivalent Armor Thickness readout in the Armor GUI.
	- Fix custom ammobelt UI overwriting belts on heterogeneous weapon groups.
- AI / WM: